* Added new write format to output the atomic potentials to a flat file (see atompot)
* Added new functionality for using a previously calculated potential map for a new calculation.
* Added a new program for converting delphi potential maps to OpenDX format. tools/mesh/del2dx
* Updated Doxygen manual with call/caller graphs.  Replaced HTML with PDF.
* Added tools/matlab/solver with simple Matlab LPBE solver for prototyping, teaching, etc.
* Deprecated APBS XML output format.
* Deprecated nlev keyword.
* Added etol keyword, which allows user-defined error tolerance in LPBE and NPBE calculations (default errtol value is 1.0e-6).
* Added more explanatory error messages for the case in which parm keyword is missing from APBS input file for apolar calculations.
* Added a polar and apolor forces calculation example to examples/born/ .
* Added warning messages for users who try to compile APBS with --enable-tinker flag and run APBS stand-alone execution.
* Switched default Opal service urls from sccne.wustl.edu to NBCR.
* Added a sanity check in routines.c: 'bcfl map' in the input file requires 'usemap pot' statement in the input file as well.
* Introduced Vpmgp_size() routine to replace F77MGSZ call in vpmg.c

# BUGFIXES
* Modified Vpmg_dbForce with some grid checking code provided by Matteo Rotter.
* Fixed a bug in psize.py per Michael Lerner's suggestion. The old version of psize.py gives wrong cglen and fglen results in special cases (e.g., all y coordinates are negative values).
* Fixed a bug in examples/scripts/checkforces.sh: the condition for "Passed with rounding error" is abs(difference) < errortol, not the other way around.
* Fixed the help string in ApbsClient.py .
* Fixed a bug in Vacc_atomdSASA(): the atom SASA needs to be reset to zero displacement after finite melement methods.
* Fixed a bug in Vpmg_dbForce(): the initialization of rtot should appear before it is used.
* Fixed a bug in initAPOL(): center should be initialized before used.