@@ -26,3 +26,4 @@ complete change log
 * Fixed a bug in Vacc_atomdSASA(): the atom SASA needs to be reset to zero displacement after finite melement methods.
 * Fixed a bug in Vpmg_dbForce(): the initialization of rtot should appear before it is used.
 * Fixed a bug in initAPOL(): center should be initialized before used.
+* Fixed a bug in routines.c: eliminated spurious "Invalid data type for writing!" and "Invalid format for writing!" from outputs with "write atompot" statement in the input file.
